# aicorns_liaufa

./: .gcloudignore  .gitignore  Dockerfile  Pipfile  README.md  broadcast.py  configs.py  docker-compose.dev.yml  main.py  models.py  pyproject.toml  pytest.ini  requirements.txt  tasks.py  test.json
.github/workflows/: main.yaml
components/: getter.py
configs/: CampaignContacts.json  CampaignInstances.json  Companies.json  LinkedinAccount.json  LinkedinContacts.json  LinkedinContactsTags.json  LinkedinCounts.json  LinkedinSimpleMessenger.json  Tags.json
export/: CampaignContacts.json  CampaignInstances.json  Companies.json  LinkedinContactsTags.json  LinkedinCounts.json  Tags.json
models/: CampaignContacts.py  CampaignInstances.py  Companies.py  LinkedinAccounts.py  LinkedinContacts.py  LinkedinContactsTags.py  LinkedinCounts.py  LinkedinSimpleMessenger.py  Tags.py  models.py
test/: test_broadcast.py  test_units.py  utils.py
